<resources>
    <string name="app_name">ppspp</string>
    <string name="createProfileBtn">Create Profile</string>
    <string name="loginBtn">Login</string>
    <string name="createClient">Create Client</string>
    <string name="inviteCertBtn">Button</string>
    <string name="createNetBtn">Create Network</string>
    <string name="startVpnBtn">Start VPN</string>
    <string name="title_activity_main2">My Compose App</string>
    <string name="title_activity_main">home</string>
    <string name="title_activity_video_player">Video Player</string>
</resources>